force-app/main/default/objects/Opportunity/fields/Walk_In_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Sub_Source__c</fullName>
    <label>Walk-In Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Walk_In_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOI</fullName>
            </value>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>NBT</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>MINT</fullName>
            </value>
            <value>
                <fullName>FE</fullName>
            </value>
            <value>
                <fullName>Mirchi</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Red FM</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Big</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>SCM</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>linkedin</fullName>
            </value>
            <value>
                <fullName>Banner ads</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Road blocks(High Impact Properties)</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Smart devices</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>live chats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>