force-app/main/default/objects/Opportunity/fields/Walk_In_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Subtype__c</fullName>
    <label>Walk-In Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>SDR or Challan</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>Bank Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>