force-app/main/default/objects/Opportunity/fields/Walk_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Type__c</fullName>
    <label>Walk-In Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Related</fullName>
            </value>
            <value>
                <fullName>Document Related</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>