force-app/main/default/objects/Opportunity/fields/Walk_In_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Visit_Type__c</fullName>
    <label>Walk-In Visit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>