force-app/main/default/objects/Opportunity/recordTypes/Opp_BTS.recordType-meta.xml
<RecordType>
    <fullName>Opp_BTS</fullName>
    <active>true</active>
    <businessProcess>Opp BTS</businessProcess>
    <label>Opp BTS</label>
</RecordType>