force-app/main/default/objects/Opportunity/recordTypes/Opp_LAND.recordType-meta.xml
<RecordType>
    <fullName>Opp_LAND</fullName>
    <active>true</active>
    <businessProcess>Opp LAND</businessProcess>
    <label>Opp LAND</label>
</RecordType>